[package]

name = "behaviour-tree"
version = "0.0.1"
authors = ["Vaelden <vaelden@vaelden.me.uk>"]
build = "build.rs"      # LALRPOP

[dependencies]
phf = "*"
phf_macros = "*"
lalrpop-util = "0.10.0"
ref_slice = "1.0.0"
flat-tree = { git = "https://github.com/GreenPix/flat-tree.git"}

[build-dependencies]
lalrpop = "0.10.0"

[[bin]]
doc = false
name = "behaviour-tree-bin"
